--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,13 @@ body {
     font-family: "Roboto", sans-serif;
 }
 
+
+
+/* Header: nav */
+
+
 header {
-    padding: 25px 300px;
+    padding: 25px 400px;
     background-color: #1F2937;
     color: #F9FAF8;
 }
@@ -36,3 +41,43 @@ header nav {
     margin-left: 20px;
 }
 
+
+/* Header: hero */
+
+.hero {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 100px;
+    margin-top: 80px;
+    height: 400px;
+    padding-bottom: 100px;
+}
+
+.hero img {
+    width: 500px;
+    height: auto;
+}
+
+.hero-text h1 {
+    font-size: 48px;
+    font-weight: 900;
+}
+
+.hero-text p {
+    color: #E5E7EB;
+    font-size: 18px;
+    margin-top: 10px;
+}
+
+button {
+    background-color: #3882F6;
+    padding: 10px 30px;
+    border-radius: 10px;
+    cursor: pointer;
+    color: #F9FAF8;
+    font-size: 18px;
+    font-weight: 700;
+    border: none;
+    margin-top: 20px;
+}
