--- a/styles.css
+++ b/styles.css
@@ -10,11 +10,12 @@ body {
 
 
 
+
 /* Header: nav */
 
 
 header {
-    padding: 25px 400px;
+    padding: 25px 200px;
     background-color: #1F2937;
     color: #F9FAF8;
 }
@@ -42,21 +43,27 @@ header nav {
 }
 
 
+
+
 /* Header: hero */
+
 
 .hero {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 100px;
+    align-items: flex-start;
+    gap: 70px;
     margin-top: 80px;
-    height: 400px;
     padding-bottom: 100px;
 }
 
-.hero img {
-    width: 500px;
-    height: auto;
+.hero-text {
+    flex: 1;
+}
+
+.hero-image {
+    min-width: 400px;
+    flex: 1;
+    overflow: hidden;
 }
 
 .hero-text h1 {
