Style quote part

--- a/styles.css
+++ b/styles.css
@@ -138,3 +138,27 @@ button {
 .quote-part {
     background-color: #E5E7EB;
 }
+
+.quote-text {
+    font-size: 36px;
+    padding: 60px 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+.quote-part p:first-of-type {
+    font-style: italic;
+    font-weight: light;
+    color: #75777a;
+}
+
+.quote-part p:last-of-type {
+    font-size: 24px;
+    margin-top: 8px;
+    font-weight: 700;
+    color: #1F2937;
+    align-self: flex-end;
+    margin-right: 80px;
+}
