--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ header nav {
 
 .hero {
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     gap: 70px;
     margin-top: 80px;
     padding-bottom: 100px;
